2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-manage-views.c
	(nautilus_window_slot_open_location_full):
	Find target slot before checking whether the location actually
	changed, fall back to opening slot rather than the active slot.

2008-06-29  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-slot.c (real_slot_info_get_current_location),
	(nautilus_window_slot_info_iface_init):
	Return pending location, fall back to current location. This API is
	used by the side panes, we have to guarantee that a valid URI is
	returned even if the view has not yet been set up.

2008-06-28  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-slot.c
	(nautilus_window_slot_update_query_editor):
	Destroy old query editor before creating new one.

2008-06-28  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-navigation-window-menus.c (action_new_tab_callback):
	* src/nautilus-navigation-window.c (hide_temporary_bars),
	(real_sync_search_widgets),
	(nautilus_navigation_window_class_init):
	* src/nautilus-spatial-window.c (nautilus_spatial_window_show),
	(nautilus_spatial_window_class_init):
	* src/nautilus-window-manage-views.c (found_mount_cb),
	(update_for_new_location):
	* src/nautilus-window-slot.h:
	* src/nautilus-window.c (nautilus_window_sync_search_widgets):
	* src/nautilus-window.h:
	Rename nautilus_window_set_search_mode() to
	nautilus_window_sync_search_widgets(), which just updates the widgets
	from the slot state. Minor code refactorizations.

2008-06-28  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-query-editor.c (nautilus_query_editor_clear_query),
	(nautilus_query_editor_new), (detach_from_external_entry),
	(attach_to_external_entry), (nautilus_query_editor_new_with_bar),
	(nautilus_query_editor_set_query):
	* src/nautilus-query-editor.h:
	Attach to and detach from search bar entry as slot becomes active/
	inactive, restore search entry text on activation.
